2004-09-12  David Reveman  <c99drn@cs.umu.se>

	* src/icint.h: slim_hidden_proto pixman_image_set_component_alpha.

	* src/pixman.h: Added pixman_image_set_component_alpha, making it
	possible to use component alpha.

	* src/icimage.c (pixman_image_set_clip_region): Make a copy of
	the client owned region.
	(IcComputeCompositeRegion): Intersect possible client region.
	Added pixman_image_set_component_alpha.

	* src/icint.h: Include "../config.h".
	Define IMAGE_BYTE_ORDER and BITMAP_BIT_ORDER correctly.

	* configure.in: Added AC_C_BIGENDIAN.

	* src/ic.c (pixman_composite): 
	* src/iccompose.c (IcFetch_transform, IcFetcha_transform): 
	* src/icimage.h: Added support for both transform and repeat
	(thanks to Owen Taylor <otaylor@redhat.com>).

2004-05-06  Carl Worth  <cworth@isi.edu>

	* src/icimage.c (pixman_image_set_clip_region): Leave
	clientClipType as CT_NONE if region is NULL (thanks to Vladimir
	Vukicevic <vladimir@pobox.com>).

2004-04-16  Carl Worth  <cworth@isi.edu>

	* NEWS: Add notes for snapshot 0.1.1

	* configure.in: Increment LIBPIXMAN_VERSION to 0.1.1

	* src/ictrap.c (IcCreateAlphaPicture): 
	* src/icrect.c (pixman_color_rects): 
	* src/pixregion.c (pixman_region16_print, pixman_region16_valid): 
	* src/icint.h (IcBitsMask):
	* src/icimage.h:
	* src/icimage.c (pixman_image_change):
	* src/icformat.c (pixman_format_create): 
	* src/pixman.h: Fix bogus names such as PIXMAN_FORMAT_NAME_AR_GB32
	that were left over from a broken search-and-replace. Normalize
	structure defintions, (eg. struct _pixman_region16_t -> struct
	pixman_region16). Normalize indentation.

	* AUTHORS: Fix alphabetization.

2004-02-24  Carl Worth  <cworth@isi.edu>

	* AUTHORS: Added attribution for several authors after sifting
	through the ChangeLog.
	Fix email address for Anders Carlsson.

2004-01-24  Carl Worth  <cworth@isi.edu>

	* src/iccompose.c (IcFetch_transform): 
	(IcFetcha_transform): Remove dead-code (useless n++).

2004-01-22  Richard Worth <richard@theworths.org>
