@@ -6,7 +6,7 @@ Anders Carlsson <andersca@gnome.org> Build fixes. New accessor functions.
 Richard Henderson <rth@twiddle.net> "slim" macros for better shared libraries 
 Owen Taylor <otaylor@redhat.com> Support for both transform and repeat
 Keith Packard <keithp@keithp.com> The original implementation of the compositing code.
-David Reveman <c99drn@cs.umu.se> Byte-order and clipping fixes.
+David Reveman <c99drn@cs.umu.se> Byte-order, clipping and format fixes.
 Vladimir Vukicevic <vladimir@pobox.com> Bug fix.
 Bryan Worth <bryan@theworths.org> Cleanups to not depend on X header files.
 Carl Worth <carl@theworths.org> General maintenance. Original port from X server code.
